--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -224,9 +224,10 @@ The principle behind the construction of $wpd$ is explained through a simple exa
 
 
 
-```{r null4by2,fig.cap = "A graphical display with two categories mapped to x-axis and 3 categories mapped to facets with the distribution of a continuous random variable plotted on the y-axis. Display a is not interesting as the distribution of the variable does not depend on x or facet categories. Display b and c are more interesting than a since there is a change in distribution either across facets (b) or x-axis (c). Display d is most interesting in terms of displaying the strongest pattern as distribution of the variable changes across both facet and x-axis variable."}
-
+```{r null4by2,fig.cap = "An example illustrating the principle of the proposed distance measure, displaying the distribution of a normally distributed variable in four panels each with $2$ x-axis categories and $3$ facet levels, but with different designs. Display (a) is not interesting as the distribution of the variable does not depend on x or facet categories. Display (b) and (c) are more interesting than (a) since there is a change in distribution either across facets (b) or x-axis (c). Display (d) is most interesting in terms of capturing structure in the variable as the distribution of the variable changes across both facet and x-axis variable. The value of our proposed distance measure is presented for each panel, the relative differences between which will be explained later in Section 3.2."}
 ```
+
+
 
 <!-- A "significant" cyclic granularity have at least two categories which are significantly different from each other. It does not tell you which categories are statistically significantly different from each other -->
 
